fix(equipe): red box overflow in hover on small screens

--- a/assets/css/scss/elements/home/_equipe.scss
+++ b/assets/css/scss/elements/home/_equipe.scss
@@ -92,6 +92,7 @@
   padding: 2.375rem;
   transform: translateY(-100%);
   transition: inset 300ms ease;
+  width: 100%;
 
   span {
     width: max-content;
@@ -106,7 +107,8 @@
   &::before {
     content: "";
     position: absolute;
-    width: 7rem;
+    max-width: 7rem;
+    width: 100%;
     height: 100%;
     top: 0;
     left: 0;
