--- a/style.css
+++ b/style.css
@@ -1243,6 +1243,7 @@ a {
   transform: translateY(-100%);
   -webkit-transition: inset 300ms ease;
   transition: inset 300ms ease;
+  width: 100%;
 }
 .equipe-nome span {
   width: -webkit-max-content;
@@ -1263,7 +1264,8 @@ a {
 .equipe-nome::before {
   content: "";
   position: absolute;
-  width: 7rem;
+  max-width: 7rem;
+  width: 100%;
   height: 100%;
   top: 0;
   left: 0;
